force-app/main/default/objects/LGK__TransactionLine__c/LGK__TransactionLine__c.object-meta.xml
<CustomObject>
    <label>Transaction Line</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Transaction Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>