force-app/main/default/objects/LGK__TransactionLine__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Pulls in business unit value from product2 record</description>
    <formula>LGK__Product2Id__r.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>