force-app/main/default/objects/LGK__TransactionLine__c/fields/Expert_Price__c.field-meta.xml
<CustomField>
    <fullName>Expert_Price__c</fullName>
    <description>Set by expert price in Logik</description>
    <label>Expert Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>