force-app/main/default/objects/LGK__TransactionLine__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description>Set by floor price in Logik</description>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>