force-app/main/default/objects/LGK__TransactionLine__c/fields/Get_Support__c.field-meta.xml
<CustomField>
    <fullName>Get_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Support</label>
    <type>Checkbox</type>
</CustomField>