force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>LGK__ConfigurationId__c</fullName>
    <description>txn.line.configuration.id</description>
    <externalId>true</externalId>
    <label>Configuration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>