force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__ConfigurationStatus__c.field-meta.xml
<CustomField>
    <fullName>LGK__ConfigurationStatus__c</fullName>
    <description>txn.line.configuration.status</description>
    <externalId>true</externalId>
    <label>Configuration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>