force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__Id__c.field-meta.xml
<CustomField>
    <fullName>LGK__Id__c</fullName>
    <description>txn.line.id</description>
    <externalId>true</externalId>
    <label>Transaction Line Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>