force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>LGK__OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>TransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>