force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__ParentId2__c.field-meta.xml
<CustomField>
    <fullName>LGK__ParentId2__c</fullName>
    <description>txn.line.parent.id</description>
    <externalId>true</externalId>
    <label>Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>