force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__PricingDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>LGK__PricingDiscountAmount__c</fullName>
    <description>txn.line.pricing.discount.amount</description>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>