force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__PricingExtendedNet__c.field-meta.xml
<CustomField>
    <fullName>LGK__PricingExtendedNet__c</fullName>
    <description>txn.line.pricing.extendedNet</description>
    <label>Extended Net</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>