force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__PricingList__c.field-meta.xml
<CustomField>
    <fullName>LGK__PricingList__c</fullName>
    <description>txn.line.pricing.list</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>