force-app/main/default/objects/LGK__TransactionLine__c/fields/LGK__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>LGK__TransactionId__c</fullName>
    <label>Transaction</label>
    <referenceTo>LGK__Transaction__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>TransactionLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>