force-app/main/default/objects/LGK__TransactionLine__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Pulls in product2 family value</description>
    <formula>TEXT( LGK__Product2Id__r.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>