force-app/main/default/objects/LGK__TransactionLine__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Pulls in IM Product Line from Product2 record</description>
    <formula>TEXT(LGK__Product2Id__r.IM_Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>