force-app/main/default/objects/LGK__TransactionLine__c/fields/Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Price__c</fullName>
    <description>Set by target price in Logik</description>
    <label>Target Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>